初步搭建界面

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -8,6 +8,7 @@
     tools:context=".fragment.recipe.RecipeFragment">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitXY"
@@ -50,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView"
-        app:shapeAppearanceOverlay="@style/roundCornerImageStyle"
+        app:shapeAppearanceOverlay="@style/roundedCornerImageStyle"
         app:srcCompat="@drawable/icon" />
 
     <ImageView
@@ -69,8 +70,35 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
+        android:id="@+id/food_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:shimmer_demo_layout="@layout/food_item_shimmer_layout"
+        app:shimmer_demo_child_count="4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/type_recyclerView"
+        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintStart_toStartOf="@+id/type_recyclerView"
+        app:layout_constraintTop_toBottomOf="@+id/type_recyclerView"
+        app:layout_constraintVertical_bias="0.298" >
+
+    </com.cooltechworks.views.shimmer.ShimmerRecyclerView>
+
+
+
+
+
+
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
