--- a/app/src/main/res/drawable/indicator_bg_round_shape.xml
+++ b/app/src/main/res/drawable/indicator_bg_round_shape.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="30dp" />
-    <solid android:color="#333233" />
+    <corners android:radius="28dp" />
+    <solid android:color="#29262E" />
 </shape>
