--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -11,14 +11,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:id="@+id/foodContainer">
 
         <View
             android:id="@+id/view6"
             android:layout_width="165dp"
             android:layout_height="200dp"
             android:layout_marginTop="65dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/round_corner_shape"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,16 +38,16 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/header"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            loadImageWithUrl="@{result.image}"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2"
             app:shapeAppearanceOverlay="@style/circleImageStyle"
-            tools:srcCompat="@drawable/ic_launcher_background"
-            loadImageWithUrl="@{result.image}"/>
+            tools:srcCompat="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/food_title"
@@ -54,7 +57,6 @@
             android:layout_marginEnd="8dp"
             android:maxLines="2"
             android:text="@{result.title}"
-            tools:text="Homemade Garlic French Fries"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="#D8D8D8"
@@ -62,7 +64,8 @@
             app:layout_constraintEnd_toEndOf="@+id/view6"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/view6"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            tools:text="Homemade Garlic French Fries" />
 
         <View
             android:id="@+id/view7"
@@ -102,7 +105,6 @@
             android:id="@+id/minuteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="124"
             android:text="@{String.valueOf(result.readyInMinutes)}"
             android:textColor="#DCD79E"
             android:textStyle="bold"
@@ -110,18 +112,19 @@
             app:layout_constraintEnd_toEndOf="@+id/textView4"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toTopOf="@+id/view7" />
+            app:layout_constraintTop_toTopOf="@+id/view7"
+            tools:text="124" />
 
         <TextView
             android:id="@+id/likeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="124"
             android:text="@{String.valueOf(result.aggregateLikes)}"
             android:textColor="#DCD79E"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
-            app:layout_constraintStart_toStartOf="@+id/textView7" />
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            tools:text="124" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
