--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -9,7 +9,15 @@
         android:id="@+id/recipeFragment"
         android:name="com.mayberry.recipedemo.fragment.recipe.RecipeFragment"
         android:label="fragment_recipe"
-        tools:layout="@layout/fragment_recipe" />
+        tools:layout="@layout/fragment_recipe" >
+        <action
+            android:id="@+id/action_recipeFragment_to_detailFragment"
+            app:destination="@id/detailFragment"
+            app:enterAnim="@anim/enter_anin"
+            app:exitAnim="@anim/exit_anin"
+            app:popEnterAnim="@anim/pop_enter_anin"
+            app:popExitAnim="@anim/pop_exit_anin" />
+    </fragment>
     <fragment
         android:id="@+id/otherFragment"
         android:name="com.mayberry.recipedemo.fragment.other.OtherFragment"
@@ -20,4 +28,13 @@
         android:name="com.mayberry.recipedemo.fragment.favorite.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.mayberry.recipedemo.fragment.recipe.detail.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="recipe"
+            app:argType="com.mayberry.recipedemo.data.model.Result" />
+    </fragment>
 </navigation>
