--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
 
     <style name="circleImageStyle">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">55dp</item>
+        <item name="cornerSize">50dp</item>
+    </style>
+
+    <style name="circleImageDetailStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">85dp</item>
     </style>
 </resources>
