--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -33,8 +33,6 @@
             android:id="@+id/backBtn"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:fitsSystemWindows="true"
             android:src="@drawable/back"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +42,6 @@
             android:id="@+id/collectBtn"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:fitsSystemWindows="true"
             android:src="@drawable/normal_book_mark"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,8 +49,8 @@
 
         <ImageView
             android:id="@+id/detail_header_bg"
-            android:layout_width="230dp"
-            android:layout_height="230dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:src="@drawable/plate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,10 +58,11 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/detail_header"
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:src="@drawable/ic_launcher_background"
             loadImageWithUrl="@{recipe.image}"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="@+id/detail_header_bg"
             app:layout_constraintEnd_toEndOf="@+id/detail_header_bg"
             app:layout_constraintStart_toStartOf="@+id/detail_header_bg"
@@ -149,14 +146,13 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/cheapBtn"
+            changeStatus="@{recipe.cheap}"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#29262E"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="Cheap"
-            changeStatus="@{recipe.cheap}"
             android:textAlignment="center"
             android:textColor="@color/item_color"
             app:layout_constraintEnd_toStartOf="@+id/veryHealthyBtn"
@@ -261,6 +257,16 @@
             app:layout_constraintEnd_toEndOf="@+id/veryPopularBtn"
             app:layout_constraintStart_toEndOf="@+id/detailsBtn"
             app:layout_constraintTop_toTopOf="@+id/bg" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/main_bg"
+            app:layout_constraintEnd_toEndOf="@+id/veryPopularBtn"
+            app:layout_constraintStart_toStartOf="@+id/cheapBtn"
+            app:layout_constraintTop_toBottomOf="@+id/bg" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
