--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -87,8 +87,6 @@
         app:layout_constraintHorizontal_bias="0.809"
         app:layout_constraintStart_toStartOf="@+id/type_recyclerView"
         app:layout_constraintTop_toBottomOf="@+id/type_recyclerView"
-        app:layout_constraintVertical_bias="0.298" >
-
-    </com.cooltechworks.views.shimmer.ShimmerRecyclerView>
+        app:layout_constraintVertical_bias="0.298" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
