--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -13,11 +13,19 @@
         <action
             android:id="@+id/action_recipeFragment_to_detailFragment"
             app:destination="@id/detailFragment"
-            app:enterAnim="@anim/enter_anin"
-            app:exitAnim="@anim/exit_anin"
-            app:popEnterAnim="@anim/pop_enter_anin"
-            app:popExitAnim="@anim/pop_exit_anin" />
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/pop_enter_anim"
+            app:popExitAnim="@anim/pop_exit_anim" />
+        <action
+            android:id="@+id/action_recipeFragment_to_favoriteFragment"
+            app:destination="@id/favoriteFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/pop_enter_anim"
+            app:popExitAnim="@anim/pop_exit_anim" />
     </fragment>
+
     <fragment
         android:id="@+id/otherFragment"
         android:name="com.mayberry.recipedemo.fragment.other.OtherFragment"
