--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">75dp</item>
     </style>
+
+    <style name="circleImageFavoriteStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">60dp</item>
+    </style>
 </resources>
