--- a/app/src/main/res/menu-v26/bottom_menu.xml
+++ b/app/src/main/res/menu-v26/bottom_menu.xml
@@ -7,17 +7,20 @@
         android:title="Recipes"
         app:showAsAction="ifRoom"
         android:iconTint="#7C7B7E"/>
-    <item
-        android:id="@+id/otherFragment"
-        android:icon="@drawable/ic_other"
-        android:title="Other"
-        app:showAsAction="ifRoom"
-        android:iconTint="#7C7B7E"/>
+
     <item
         android:id="@+id/favoriteFragment"
         android:icon="@drawable/ic_star"
         android:title="Favorite"
         app:showAsAction="ifRoom"
         android:iconTint="#7C7B7E"/>
+
+    <item
+        android:id="@+id/loginFragment"
+        android:icon="@drawable/ic_login"
+        android:title="Login"
+        app:showAsAction="ifRoom"
+        android:iconTint="#7C7B7E"/>
+
 
 </menu>
