--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -27,10 +27,14 @@
     </fragment>
 
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.mayberry.recipedemo.fragment.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        android:id="@+id/accountFragment"
+        android:name="com.mayberry.recipedemo.fragment.account.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/favoriteFragment"
@@ -46,6 +50,24 @@
         <argument
             android:name="recipe"
             app:argType="com.mayberry.recipedemo.data.model.Result" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.mayberry.recipedemo.fragment.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.mayberry.recipedemo.fragment.register.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_recipeFragment"
+            app:destination="@id/recipeFragment" />
     </fragment>
 
 </navigation>
