--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -20,9 +20,9 @@
         tools:targetApi="o" />
 
     <item
-        android:id="@+id/loginFragment"
-        android:icon="@drawable/ic_login"
-        android:title="Login"
+        android:id="@+id/accountFragment"
+        android:icon="@drawable/ic_account"
+        android:title="Account"
         app:showAsAction="ifRoom"
         android:iconTint="#7C7B7E"
         tools:targetApi="o" />
